<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome !</string>
    <string name="app_name">WePaint</string>
    <string name="add">Add a shape</string>
    <string name="color">Choose a color</string>
    <string name="move">Move a shape</string>
    <string name="vocal">Speak</string>
    <string name="remove">Remove</string>
    <string name="configuration">Configuration</string>
    <string name="addDesc">Choose a shape to add</string>
    <string name="moveDesc">Choose a way to move</string>
    <string name="compass">Compass</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="configDesc">Configuration</string>
    <string name="urlLabel">Server URL :</string>
    <string name="sessionLabel">Session name :</string>
    <string name="locationLabel">Location :</string>
    <string name="locationParamsLabel">Location Params :</string>
    <string name="confirmButton">Apply</string>
    <string name="scanQRCodeButton">Scan QRCode</string>
    <string name="moveActionDesc">Keep pressing to move</string>
	<string name="addTitle">WePaint -> Add a shape</string>
	<string name="moveTitle">WePaint -> Move a shape</string>
	<string name="moveCompassTitle">WePaint -> Move a shape -> Compass</string>
	<string name="moveAccelerometerTitle">WePaint -> Move a shape -> Accelerometer</string>
	<string name="configTitle">WePaint -> Configuration</string>
	<string name="connect">Connect</string>
	<string name="quit">Quit</string>
	<string name="pickerColorTitle">Pick a color and press the center</string>
    <string name="vocalAdd">add</string>
    <string name="vocalCircle">circle</string>
    <string name="vocalSquare">square</string>
    <string name="vocalRectangle">rectangle</string>
    <string name="vocalEllipse">ellipse</string>
    <string name="vocalColor">color</string>
    <string name="vocalBlue">blue</string>
    <string name="vocalRed">red</string>
    <string name="vocalGreen">green</string>
    <string name="vocalBlack">black</string>
    <string name="vocalGray">gray</string>
    <string name="vocalYellow">yellow</string>
    <string name="vocalRemove">remove</string>
    <string name="notConnected">You are not connected. See option button</string>
    <string name="noMatches">No matches, please retry.</string>
    <string name="noSpeechRecognition">Speech recognition is not installed.</string>
    <string name="noServerURL">Url of server is not indicated.</string>
    <string name="noSessionName">Session name is not indicated.</string>
    <string name="connected">Connected on the session</string>
    <string name="notApply">Server URL and session name fields are required.</string>
    
</resources>