<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView
        android:id="@+id/addDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/configDesc" />
    
    <TableLayout
        android:id="@+id/tableConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" >
        <TableRow
			android:layout_marginTop="10dp">
            <TextView
		        android:id="@+id/urlLabel"
		        android:layout_width="130dp"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/urlLabel" />
            <EditText
                android:id="@+id/configurationUrl"
                android:layout_width="180dp"
                android:layout_height="wrap_content" >
            </EditText>

    	</TableRow>
    	<TableRow 
    	    android:layout_marginTop="10dp">
            <TextView
		        android:id="@+id/sessionLabel"
		        android:layout_width="130dp"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/sessionLabel" />
            <EditText
                android:id="@+id/configurationSession"
                android:layout_width="180dp"
                android:layout_height="wrap_content" >
            </EditText>
    	</TableRow>
    	<TableRow 
    	    android:layout_marginTop="10dp">
            <TextView
		        android:id="@+id/locationLabel"
		        android:layout_width="130dp"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/locationLabel" />
            <EditText
                android:id="@+id/configurationLocation"
                android:layout_width="180dp"
                android:layout_height="wrap_content" >
            </EditText>
    	</TableRow>
    	<TableRow 
    	    android:layout_marginTop="10dp">
            <TextView
		        android:id="@+id/locationParamsLabel"
		        android:layout_width="130dp"
		        android:layout_height="wrap_content"
		        android:textSize="15dp"
		        android:layout_marginLeft="10dp"
		        android:text="@string/locationParamsLabel" />
            <EditText
                android:id="@+id/configurationLocationParams"
                android:layout_width="180dp"
                android:layout_height="wrap_content" >
            </EditText>
    	</TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonConfigApply"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="applyClicked"
        android:text="@string/confirmButton" />

    <ImageButton
        android:id="@+id/buttonConfigScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:onClick="scanClicked"
        android:src="@drawable/qrcode" />
    
</LinearLayout>