<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logoPic"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/logo" />

    <TableLayout
        android:id="@+id/tableHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow 
            android:gravity="center"
            android:layout_marginTop="30dp">
            <ImageView
       			android:id="@+id/addPic"
        		android:layout_width="80dp"
        		android:layout_height="80dp"
        		android:src="@drawable/add"
        		android:onClick="addClicked"
        		android:layout_marginRight="40dp"/>
            <ImageView
       			android:id="@+id/colorPic"
        		android:layout_width="80dp"
        		android:layout_height="72dp"
        		android:src="@drawable/color"
        		android:onClick="colorClicked" 
        		android:background="#000000"
        		android:layout_marginLeft="40dp"/>
    	</TableRow>
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="5dp">
    		<TextView
    		    android:id="@+id/addText"
    		    android:text="@string/add" 
    		    android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    		<TextView
    		    android:id="@+id/colorText"
    		    android:text="@string/color"
    		    android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    	</TableRow>
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="20dp">
            <ImageView
       			android:id="@+id/movePic"
        		android:layout_height="80dp"
        		android:src="@drawable/move"
        		android:onClick="moveClicked"
        		android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
            <ImageView
       			android:id="@+id/micrPic"
        		android:layout_height="80dp"
        		android:src="@drawable/micro"
        		android:onClick="microClicked" 
        		android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    	</TableRow>
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="5dp">
    		<TextView
    		    android:id="@+id/moveText"
    		    android:text="@string/move"
    		    android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center" />
    		<TextView
    		    android:id="@+id/microText"
    		    android:text="@string/vocal"
    		    android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    	</TableRow>
    	
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="20dp">
            <ImageView
       			android:id="@+id/removePic"
        		android:layout_height="80dp"
        		android:src="@drawable/remove"
        		android:onClick="removeClicked"
        		android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
            <ImageView
       			android:id="@+id/configPic"
        		android:layout_height="80dp"
        		android:onClick="configClicked"
        		android:src="@drawable/config"
        		android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    	</TableRow>
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="5dp">
    		<TextView
    		    android:id="@+id/removeText"
    		    android:text="@string/remove"
				android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    		<TextView
    		    android:id="@+id/configText"
    		    android:text="@string/configuration"
    		    android:layout_weight="1"
      			android:layout_width="0dip"
      			android:gravity="center"/>
    	</TableRow>
    </TableLayout>
    
</LinearLayout>