<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView
        android:id="@+id/moveDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/moveDesc" />
    
    <TableLayout
        android:id="@+id/tableHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow 
            android:gravity="center"
            android:layout_marginTop="30dp">
            <ImageView
       			android:id="@+id/compassPic"
        		android:layout_width="80dp"
        		android:layout_height="80dp"
        		android:src="@drawable/move"
        		android:layout_marginRight="40dp" />
            <ImageView
       			android:id="@+id/accelerometerPic"
        		android:layout_width="80dp"
        		android:layout_height="80dp"
        		android:src="@drawable/move" 
        		android:layout_marginLeft="40dp"/>
    	</TableRow>
    	<TableRow 
    	    android:gravity="center"
    	    android:layout_marginTop="5dp">
    		<TextView
    		    android:id="@+id/compassText"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_marginLeft="10dp"
    		    android:text="@string/compass" />
    		<TextView
    		    android:id="@+id/accelerometerText"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_marginLeft="40dp"
    		    android:text="@string/accelerometer" />
    	</TableRow>
    </TableLayout>
    
</LinearLayout>